# kusabira

./: .gitignore  .gitmodules  README.md  meson.build
src/: common.hpp  report_output.hpp
src/PP/: file_reader.hpp  macro_manager.hpp  op_and_punc_table.hpp  pp_automaton.hpp  pp_constexpr.hpp  pp_directive_manager.hpp  pp_parser.hpp  pp_tokenizer.hpp  unified_macro.hpp
src/smallutill/: table_gen.cpp
src/vocabulary/: concat.hpp  scope.hpp  whimsy_str_view.hpp
subprojects/: doctest.wrap  tlexpected.wrap
test/: common_test.hpp  kusabira_test.cpp  report_output_test.hpp
test/PP/: pp_automaton_test.hpp  pp_constexpr_test.hpp  pp_directive_manager_test.hpp  pp_directive_test.hpp  pp_filereader_test.hpp  pp_paser_test.hpp  pp_tokenizer_test.hpp  unified_macro_test.hpp
test/files/PP/: parse_macro.cpp  parse_text-line.cpp  pp_test.cpp  reader_crlf.txt  reader_lf.txt
test/vocabulary/: concat_test.hpp  scope_test.hpp  whimsy_str_view_test.hpp
